feat: GET /rooms and POST /rooms
